--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,29 @@ margin-right:4px ;
 li.sidebar-item {
   margin-left: 20px;
   margin-bottom: 20px;
+  font-size: 12px;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+h1.edit-profile.mt-6.inline-block svg {
+  display: inline;
+  margin-right: 10px;
+}
+.cus_svg svg {
+  display: inline-flex;
+  vertical-align: middle;
   font-size: 18px;
+  margin-right: 14px;
+}
+.cus_svg svg{
+  display: inline-flex;
+    vertical-align: middle;
+}
+.sidebar-link svg{
+  display: inline-block;
+  margin-right: 20px;
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 .content {
   width: 100%;
@@ -98,6 +120,18 @@ li.sidebar-item {
   font-weight: 600 !important;
 
 }
+
+  .custom_logo_side
+  {
+    width: 180px !important;
+    height: 39px !important;
+    margin-bottom: 60px;
+    padding: 5px;
+    margin-top: 27px;
+    /* border-bottom: 1px solid; */
+    text-align: center;
+  }
+
 
 .edit-profile {
   margin-bottom: 20px;
