--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ margin-right:4px ;
 
 .main {
   width:100%;
-    height:100vh; 
+    height:150vh; 
     display:flex;
 }
 
@@ -73,6 +73,11 @@ li.sidebar-item {
 h1.edit-profile.mt-6.inline-block svg {
   display: inline;
   margin-right: 10px;
+}
+.customexport svg{
+  margin-top: 2px;
+  margin-right: 6px;
+  font-size: 16px;
 }
 .cus_svg svg {
   display: inline-flex;
@@ -126,6 +131,9 @@ h1.edit-profile.mt-6.inline-block svg {
   text-align: center !important; 
   font-weight: 600 !important;
 
+}
+.h-screen {
+  height: 120vh !important;
 }
 
   .custom_logo_side
