--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,11 @@ h1.edit-profile.mt-6.inline-block svg {
   margin-right: 6px;
   font-size: 16px;
 }
+.sm:mx-auto{
+  margin-left: 0px !important;
+  
+
+}
 .inline-block_cus a
 {
   display: inline-block;
