--- a/src/App.css
+++ b/src/App.css
@@ -163,5 +163,10 @@ h1.edit-profile.mt-6.inline-block svg {
   text-transform: uppercase;
 }
 
+.button-cls {
+  color: blue;
+}
+.colr-text{
+  color:#F77171;
+}
 
-   
