--- a/src/App.css
+++ b/src/App.css
@@ -316,6 +316,9 @@ button.sidebar-link {
   .left_side_login {
     width: 100%;
 }
+.sidebar{
+  display:none;
+}
 button.absolute.right-2.custom_position.text-gray-500 {
   right: 30px;
   top: 148px;
