--- a/src/App.css
+++ b/src/App.css
@@ -332,3 +332,12 @@ button.absolute.right-2.custom_position.text-gray-500 {
     }
     
   }
+
+
+  @media (min-width: 1020px) and (max-width: 1600px) {
+    /* Styles for screens between 768px and 1080px */
+    .custom_menu_full{
+      display:none;
+    }
+    
+  }
